--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,3 @@
-div {
-  background-color: orange;
-  transform: rotate(90deg);
-}
-
-h2 {
-  color: purple;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
